# KDE_osk

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
data/: 70-kde-osk-uinput.rules  fcitx5-kde-osk-bridge.conf  kde-osk-input-panel.desktop.in  kde-osk-kwin-broker.desktop.in  kde-osk-sddm-wayland.conf.in  kde-osk-shell.desktop  kde-osk-shell.service.in  org.kde.KdeOsk.Keyboard.xml  org.kde.KdeOsk.service.in
docs/: ARCHITECTURE.md  BROKER.md  DBUS.md  IMPLEMENTATION_PLAN.md  LINUX_TEST_PLAN.md  PRODUCT_SPEC.zh-CN.md  REFERENCES.md
qml/: InputPanel.qml  KeyButton.qml  KeyboardView.qml  Main.qml  SddmInputMethod.qml
scripts/: dev-build.sh  install-sddm-inputmethod.sh
src/: HardwareKeyboardMonitor.cpp  HardwareKeyboardMonitor.h  KeyboardController.cpp  KeyboardController.h  ShellSettings.cpp  ShellSettings.h  ShellWindowAdapter.cpp  ShellWindowAdapter.h  UInputKeyboard.cpp  UInputKeyboard.h  main.cpp
src/broker/: KWinBrokerMain.cpp
src/fcitx5-bridge/: KdeOskBridge.cpp  README.md
src/lockscreen/: README.md
src/panel/: InputPanelMain.cpp
src/sddm/: InputPanelIntegration.cpp  InputPanelIntegration.h  InputPanelRole.h  QWaylandInputPanelShellIntegration.cpp  QWaylandInputPanelShellIntegration.h  QWaylandInputPanelSurface.cpp  QWaylandInputPanelSurface.h  README.md  SddmInputMethodController.cpp  SddmInputMethodController.h  SddmInputMethodMain.cpp  WaylandInputMethod.cpp  WaylandInputMethod.h
